--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,42 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>OG2!</h1>
+<div id="game" class="container flex flex-row">
+  <div id="resources" class="flex flex-col w-1/3 border-2 border-black p-1 m-2">
+    <h2>Resources</h2>
+    <table class="table-auto">
+      <thead>
+        <tr>
+          <th>Iron</th>
+          <th>Cooper</th>
+          <th>Gold</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><%= @user_game.iron_resources %></td>
+          <td><%= @user_game.copper_resources %></td>
+          <td><%= @user_game.gold_resources %></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+
+  <div id="factories" class="flex flex-col w-1/2 border-2 border-black p-1 m-2">
+    <h2>Factories</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Iron</th>
+          <th>Cooper</th>
+          <th>Gold</th>
+        </tr>
+      </thead>
+      <tbody>
+      <tr>
+        <td><%= @user_game.iron_factory_level %></td>
+        <td><%= @user_game.copper_factory_level %></td>
+        <td><%= @user_game.gold_factory_level %></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
