--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,16 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
     <div class="container">
       <%= yield %>
+    </div>
+    <div class="w-1/2 m-6">
+      <% if notice %>
+        <p class="text-green-500 notice"><%= notice %></p>
+      <% end %>
+      <% if alert %>
+        <p class="text-red-500 alert"><%= alert %>!</p>
+      <% end %>
     </div>
   </body>
 </html>
